@@ -1,5 +1,9 @@
 2010-07-18  Asa Ayers  <Asa.Ayers@Gmail.com>
 
+- Implemented COD mail (Ticket #1) and updated the way postage was counted so that if you mail multiple items at once, they will all have the postage counted. I also removed the 30c for postage from how QA thresholds are calculated now that they will be counted every time.
+
+2010-07-18  Asa Ayers  <Asa.Ayers@Gmail.com>
+
 - Added color coding to the minimum price tooltip. If your minimum price is below the current auction price, it wll be green, otherwise it is red.
 - Added the ability to change the price of an item. You can click the Total Invested or the Invested Each to change the value. 
 - Fixed a bug where sometimes the number owned was not being updated, so you might have 3 of an item but it was calculating as if you only had 1.
